purged (0.17) UNRELEASED; urgency=medium

  * Bump build-dependency on golang-go, purged FTBFS with 2:1.11~1 from buster,
    while it builds properly with 2:1.14~1~bpo10+1 from buster backports.

 -- Emanuele Rocca <ema@wikimedia.org>  Mon, 29 Jun 2020 11:39:25 +0200

purged (0.16) buster-wikimedia; urgency=medium

  * Serialize access to KafkaReader.maxts (Bug: T256479)

 -- Emanuele Rocca <ema@wikimedia.org>  Fri, 26 Jun 2020 15:27:13 +0200

purged (0.15) buster-wikimedia; urgency=medium

  * Build against prometheus-rdkafka-exporter 0.2 to fix issue with wrong
    labels being added to metrics such as
    rdkafka_consumer_topics_partitions_msgs.

 -- Emanuele Rocca <ema@wikimedia.org>  Tue, 02 Jun 2020 10:24:09 +0200

purged (0.14) buster-wikimedia; urgency=medium

  * Expose rdkafka prometheus metrics using promrdkafka

 -- Emanuele Rocca <ema@wikimedia.org>  Wed, 27 May 2020 12:51:05 +0200

purged (0.13) buster-wikimedia; urgency=medium

  * Fixed a bug where the event lag was not reported when maxAge was zero

 -- Giuseppe Lavagetto <glavagetto@wikimedia.org>  Mon, 18 May 2020 10:17:16 +0200

purged (0.12) buster-wikimedia; urgency=medium

  * Add the topic to the kafka-related metrics

 -- Giuseppe Lavagetto <glavagetto@wikimedia.org>  Fri, 15 May 2020 11:48:46 +0200

purged (0.11) buster-wikimedia; urgency=medium

  * Add the ability to consume from kafka

 -- Giuseppe Lavagetto <glavagetto@wikimedia.org>  Wed, 06 May 2020 15:37:47 +0200

purged (0.10) buster-wikimedia; urgency=medium

  * Add copyright notices
  * New flag -frontend_delay

 -- Emanuele Rocca <ema@wikimedia.org>  Wed, 06 May 2020 12:22:50 +0200

purged (0.9) buster-wikimedia; urgency=medium

  * Retry sending requests up to 'sendAttempts' times
  * Add metric 'purged_tcp_errors_total'

 -- Emanuele Rocca <ema@wikimedia.org>  Tue, 28 Apr 2020 11:28:38 +0200

purged (0.8) buster-wikimedia; urgency=medium

  * Add metric 'purged_udp_bytes_read_total'
  * multicast: test URL extraction